docker_based_deploy_azure/app_resources/k8s_cluster/config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: eszop
  namespace: default
spec:
  rules:
    - http:
        paths:
        - path: /api/?(.*)
          backend:
            serviceName: eszop-api-gateway
            servicePort: 80
        - path: /?(.*)
          backend:
            serviceName: eszop-frontend
            servicePort: 80
